--- a/src/main/webapp/pages/farmacia/receta/listaReceta.xhtml
+++ b/src/main/webapp/pages/farmacia/receta/listaReceta.xhtml
@@ -117,7 +117,7 @@
                     </p:column>
                     <p:column sortBy="#{receta_.estado}" style="text-align: center;">
                         <f:facet name="header">  
-                            <h:outputText value="#{'receta.estado'}" />  
+                            <h:outputText value="#{messages['comun.estado']}" />  
                         </f:facet> 
                         <h:outputText value="#{receta_.estado}" />
                     </p:column>                    
@@ -143,17 +143,17 @@
                 <h:form id="form-dialog">
 
                     <p:panelGrid columns="4">
-                        <label for="nombres" >#{messages['common.firstname']}: </label>                        
+                        <label for="nombres" style="margin-top: -5px;">#{messages['common.firstname']}: </label>                        
                         <h:outputText value="#{recetaListaServicio.recetaSeleccionada.paciente.nombres}" />                                                
-                        <label for="numero" >#{messages['fichaMedica.numero']}: </label>                        
+                        <label for="numero" style="margin-top: -5px;">#{messages['fichaMedica.numero']}: </label>                        
                         <h:panelGroup >
                             <h:outputText value="#{recetaListaServicio.recetaSeleccionada.consultaMedica.historiaClinica.fichaMedica.numFicha}" rendered="#{recetaListaServicio.recetaSeleccionada.consultaMedica.persistent}"/>                        
                             <h:outputText value="#{recetaListaServicio.recetaSeleccionada.consultaOdontologica.fichaOdontologica.fichaMedica.numFicha}" rendered="#{recetaListaServicio.recetaSeleccionada.consultaOdontologica.persistent}"/>                        
                         </h:panelGroup>                        
-                        <label for="apellidos" >#{messages['common.surname']}: </label>
+                        <label for="apellidos"style="margin-top: -5px;" >#{messages['common.surname']}: </label>
                         <h:outputText value="#{recetaListaServicio.recetaSeleccionada.paciente.apellidos}" />
-                        <label for="fecha" >#{messages['comun.fecha.now']}: </label>                        
-                        <h:outputText value="#{recetaListaServicio.recetaSeleccionada.fecha}" >
+                        <label for="fecha" style="margin-top: -5px;">#{messages['fechaReceta.fechaEmision']}: </label>                        
+                        <h:outputText value="#{recetaListaServicio.recetaSeleccionada.fechaEmision}" >
                             <f:convertDateTime locale="es" pattern="dd-MMM-yyyy"/>
                         </h:outputText>                                                
                     </p:panelGrid>
